--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <main>
         <section class="section__container--example">
         <h1>Creando portafolio en Github Page</h1>
-        <p>Estamos en proceso de creacion.</p>
+        <p>Estamos en proceso de creacion. :D</p>
         <img src="https://i.imgur.com/VM8Y3MM.gif" alt="matrix">
     </section>
 
